Fixed bug with bleeding text

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,6 +37,7 @@ body {
     left: 0;
     right: 0;
     height: 100vh;
+    overflow: auto;
 }
 
 .block2 {
